files/mm_db_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mattermostdb
  name: mattermostdb
spec:
  ports:
    - name: 5432-tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    deploymentconfig: mattermostdb
  sessionAffinity: None
  type: ClusterIP
