files/mm_nginx_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
